# adzan_reminder_app

./: package.json  tailwind.config.cjs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  prayer_time.rs
src-tauri/src/app/: mod.rs  services.rs  services_test.rs
src-tauri/src/domain/: entities.rs  mod.rs
src-tauri/src/helpers/: mod.rs  notification.rs  serde_helpers.rs
src-tauri/src/infra/: mock_repository.rs  mod.rs  repository.rs
src/routes/: +page.svelte
