[package]
name = "adzan-reminder"
version = "0.1.0"
description = "A Tauri App"
authors = ["ismail <ismailnuralam@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "adzan_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[features]
default = ["gui"]
gui = ["tauri-build", "tauri"]

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
reqwest = {version = "0.12.28", features = ["json"] }
chrono = "0.4.42"
thiserror = "2.0.17"
async-trait = "0.1.89"
tokio = "1.48.0"
dialoguer = "0.12.0"
console = "0.16.2"
confy = "2.0.0"
fuzzy-matcher = "0.3.7"
skim = "0.20.5"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros"] }
mockall = "0.14.0"

[[bin]]
name = "adzan"
path = "src/bin/cli/main.rs"
